# modern-agentic-ai-engineer-companion

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  requirements.txt
blueprints/agent-loop/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/agent-loop/src/agent_loop/: __init__.py  errors.py  loop.py  messages.py  model.py  tools.py
blueprints/agent-loop/tests/: conftest.py  test_loop.py  test_recovery.py  test_tools.py
blueprints/eval-harness/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/eval-harness/datasets/: example.jsonl
blueprints/eval-harness/src/eval_harness/: __init__.py  dataset.py  gate.py  runner.py
blueprints/eval-harness/src/eval_harness/graders/: __init__.py  base.py  deterministic.py  llm_judge.py
blueprints/eval-harness/tests/: conftest.py  test_dataset.py  test_gate.py  test_graders.py  test_runner.py
blueprints/llm-gateway/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/llm-gateway/src/llm_gateway/: __init__.py  cache.py  client.py  guards.py  metering.py  ports.py  routing.py
blueprints/llm-gateway/tests/: conftest.py  test_cache.py  test_client.py  test_gateway.py  test_guards.py  test_routing.py
blueprints/mcp-server/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/mcp-server/src/mcp_server/: __init__.py  consume.py  resources.py  server.py  tools.py
blueprints/mcp-server/tests/: conftest.py  test_consume.py  test_safety.py  test_server.py
blueprints/memory-module/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/memory-module/src/memory_module/: __init__.py  longterm.py  store.py  summarize.py  working.py
blueprints/memory-module/src/memory_module/backends/: __init__.py  base.py  memory.py  sqlite.py
blueprints/memory-module/tests/: conftest.py  test_longterm.py  test_persistence.py  test_working.py
blueprints/multi-agent-supervisor/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/multi-agent-supervisor/src/multi_agent_supervisor/: __init__.py  aggregate.py  guards.py  model.py  routing.py  supervisor.py  worker.py
blueprints/multi-agent-supervisor/tests/: conftest.py  test_failure.py  test_parallel.py  test_routing.py
blueprints/observability-stack/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/observability-stack/src/observability_stack/: __init__.py  attributes.py  cost.py  exporters.py  tracing.py
blueprints/observability-stack/tests/: conftest.py  test_cost.py  test_exporters.py  test_tracing.py
blueprints/rag-pipeline/: PLAN.md  README.md  demo.py  pyproject.toml
blueprints/rag-pipeline/src/rag_pipeline/: __init__.py  embed.py  ingest.py  rerank.py  retrieve.py  tokenize.py
blueprints/rag-pipeline/src/rag_pipeline/stores/: __init__.py  base.py  chroma.py  memory.py
blueprints/rag-pipeline/tests/: conftest.py  test_chunking.py  test_rerank.py  test_retrieve.py
capstone/agentic-platform/: .dockerignore  docker-compose.yml  pyproject.toml
capstone/agentic-platform/agents/: __init__.py  approvals.py
capstone/agentic-platform/agents/graph/: README.md  agent.py
capstone/agentic-platform/agents/pydantic_ai/: agent.py
capstone/agentic-platform/agents/raw/: __init__.py  loop.py
capstone/agentic-platform/agents/tools/: __init__.py  schemas.py
capstone/agentic-platform/app/: __init__.py
capstone/agentic-platform/app/api/: __init__.py  chats.py  documents.py  health.py  runs.py
capstone/agentic-platform/app/core/: __init__.py  auth.py  deps.py
capstone/agentic-platform/app/db/: __init__.py  base.py  models.py  repositories.py
capstone/agentic-platform/app/db/migrations/: __init__.py
capstone/agentic-platform/app/domain/: __init__.py  models.py
capstone/agentic-platform/app/services/: __init__.py  agent_service.py  document_service.py
capstone/agentic-platform/core/: config.py  errors.py
capstone/agentic-platform/evals/: README.md  dataset.py  graders.py  run_evals.py
capstone/agentic-platform/evals/datasets/: baseline.json
capstone/agentic-platform/infra/: README.md
capstone/agentic-platform/infra/envs/dev/: backend.tf  main.tf
capstone/agentic-platform/infra/modules/platform/: main.tf  outputs.tf  variables.tf  versions.tf
capstone/agentic-platform/mcp/: README.md  __init__.py  backends.py  consume.py  mock_server.py  server.py
capstone/agentic-platform/memory/: __init__.py  store.py
capstone/agentic-platform/memory/backends/: base.py
capstone/agentic-platform/observability/: __init__.py  cost.py  setup.py  tracing.py
capstone/agentic-platform/prompts/: README.md  __init__.py  registry.py
capstone/agentic-platform/prompts/triage_ticket/v1/: system.md
capstone/agentic-platform/rag/: retrieve.py
capstone/agentic-platform/rag/ingest/: chunk.py  embed.py  tokenize.py
capstone/agentic-platform/rag/stores/: base.py  chroma.py
capstone/agentic-platform/security/: README.md  audit.py  delegated_auth.py  permissions.py  sandbox.py
capstone/agentic-platform/web/: .env.local.example  .gitignore  next.config.mjs  postcss.config.mjs  tailwind.config.ts
capstone/agentic-platform/web/app/: page.tsx
capstone/agentic-platform/web/lib/: api.ts  auth.ts
capstone/agentic-platform/workers/tasks/: __init__.py  ingestion.py  outbox.py  schedules.py
templates/agent-project-starter/: .env.example  .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
templates/agent-project-starter/src/app/: __init__.py  agent.py  config.py  llm.py  main.py
templates/agent-project-starter/tests/: test_agent_mock.py  test_config.py  test_example_tool.py
templates/fastapi-agent-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  pyproject.toml
templates/fastapi-agent-service/app/: __init__.py  main.py
templates/fastapi-agent-service/app/api/: __init__.py  health.py  runs.py
templates/fastapi-agent-service/app/core/: deps.py  security.py  settings.py
templates/fastapi-agent-service/app/schemas/: runs.py
templates/fastapi-agent-service/app/services/: agent_service.py
templates/fastapi-agent-service/app/tests/: test_health.py  test_runs_mock.py
(+881 files in other folders)
