[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "0.1.0"
description = "Pattern blueprint: a small MCP server (tools + resources) and a safe MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Intentionally dependency-free: the protocol core, server, and safe client are built
# on the standard library only, so this blueprint imports and runs anywhere Python does.
# The repo's requirements.txt pins the wider companion toolchain; nothing here needs it.
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
