[project]
name = "agentic-platform"
version = "0.1.0"
description = "The capstone: a general-purpose multi-agent platform (RAG, tools, MCP, async runs, FastAPI backend, evals, observability, guardrails)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Modern Agentic AI Engineer", email = "you@example.com" },
]

# The platform's runtime dependencies. uv resolves and locks these into uv.lock.
# Versions are floors known to work with the book's code; the lockfile pins exact
# versions for reproducibility.
dependencies = [
    # Model layer — the only door to model APIs (llm/).
    "anthropic>=0.69",          # primary provider; supports claude-opus-4-8
    "openai>=1.50",             # secondary provider (routing / eval-judge)
    # API surface (app/).
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    # Data layer (app/db/).
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # Async runs + schedules (workers/).
    "celery[redis]>=5.4",
    "redis>=5.0",
    # Retrieval (rag/).
    "chromadb>=0.5",
    # Tool infrastructure (mcp/) — FastMCP server + client.
    "mcp>=1.2",
    # Observability (observability/).
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
# Convenience entry points (matches the run commands in README / Appendix C).
agentic-mcp = "mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The modular-monolith packages that make up the platform. Each subsystem is a
# top-level package under this root (Appendix C).
packages = [
    "app",
    "agents",
    "rag",
    "memory",
    "prompts",
    "llm",
    "security",
    "workers",
    "mcp",
    "evals",
    "observability",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
