[project]
# ▢ TODO: rename to your service.
name = "fastapi-agent-service"
version = "0.1.0"
description = "A production-shaped FastAPI service that exposes an agent over HTTP (template)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    # ▢ TODO: your name / org.
    { name = "Your Name", email = "you@example.com" },
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    # ▢ TODO: add your agent / model SDK here, e.g.:
    # "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
